[package]
name = "paillier"
version = "0.3.10"
edition = "2018"

[lib]
crate-type = ["lib"]

[dependencies]
rayon = "1.1"
serde = { version = "1.0", features = ["derive"] }
curv = {path="../curv" ,version="0.7.0",default-features = false }
[dev-dependencies]
bencher = "0.1"
serde_json = "1.0"
rand = "0.6"

#[features]
#default = ["num-bigint"]

[[bench]]
name = "arith"
harness = false

[[bench]]
name = "encryption"
harness = false

[[bench]]
name = "keygen"
harness = false

[[bench]]
name = "proof"
harness = false

[[example]]
name = "basic"

[[example]]
name = "core"

[[example]]
name = "packed"

[[example]]
name = "simple-voting"
